tex: Contact workshop draft
Signed-off-by: Eric Huang <ehuang@gatech.edu>

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -184,3 +184,9 @@ doi = {10.1177/027836499601500602},
  isbn = {0262201623},
  publisher = {The MIT Press},
 } 
+@inproceedings{Huang2015Bounds,
+  title={Exact Bounds on the Contact Driven Motion of a Sliding Object, With Applications to Robotic Pulling},
+  author={Eric Huang and Ankit Bhatia and Byron Boots and Matt Mason},
+  booktitle={Robotics: Science and Systems},
+  year={2017},
+}
