--- a/tex/references.bib
+++ b/tex/references.bib
@@ -190,3 +190,12 @@ doi = {10.1177/027836499601500602},
   booktitle={Robotics: Science and Systems},
   year={2017},
 }
+@inproceedings{berretty2001orienting,
+  title={Orienting parts by inside-out pulling},
+  author={Berretty, R-P and Goldberg, Ken and Overmars, Mark H and Van Der Stappen, A Frank},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+  volume={2},
+  pages={1053--1058},
+  year={2001},
+  organization={IEEE}
+}
