tex: Minor edits

--- a/tex/RSS2017_CameraReady.tex
+++ b/tex/RSS2017_CameraReady.tex
@@ -523,9 +523,9 @@ the origin are
 \end{align}
 where $\mu$ is the coefficient of friction (static and dynamic), $R$
 is the region of the rigid body in contact with the plane,
-$\mathbf{v}(\mathbf{r})$ is the body point velocity given by
-(\ref{eq:generalized-velocity}) and $p(\mathbf{r})$ is a pressure
-distribution over $R$.
+$\mathbf{r}$ is a point in $R$, $\mathbf{v}(\mathbf{r})$ is the body
+point velocity given by (\ref{eq:generalized-velocity}) and
+$p(\mathbf{r})$ is a pressure distribution over $R$.
 % When unspecified, the fixed contact point is assumed to be pushed with
 % unit speed (along the $y$-axis).
 
